methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:19: error: Invalid literal number
    for j<-1to 4 {makePattern() ,forward(7)}
           ^PictureMono2:12: error: '(' expected but identifier found.
  for i<-1 to 3 {
      ^PictureMono2:16: error: illegal start of simple expression
}
^PictureMono2:18: error: '(' expected but identifier found.
  for k<-1 to 4 {
      ^PictureMono2:19: error: Invalid literal number
    for j<-1to 4 {makePattern() ,forward(7)}
           ^PictureMono2:23: error: illegal start of simple expression
} 
^PictureMono2:25: error: Unmatched closing brace '}' ignored here
}
^